--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#how">O que oferecemos</a></li>
-          <li><a class="main-nav-link" href="#meals">Consultório</a></li>
+          <li><a class="main-nav-link" href="#meals">Consultoría</a></li>
           <li><a class="main-nav-link" href="#testimonials">Depoimentos</a></li>
           <li><a class="main-nav-link" href="#contato">Contato</a></li>
           <li><a class="main-nav-link nav-cta" href="#cta">Fale conosco</a></li>
@@ -49,7 +49,7 @@
             </h1>
             <p class="hero-description stroke--desc">
               AQUI NA S4DS VOCÊ ENCONTRA UM TIME COMPLETO DE MARKETING ATUANDO
-              NO CRESCIMENTO DO SEU ESCRITÓRIO
+              NO CRESCIMENTO DO SEU ESCRITÓRIO!
             </p>
             <a href="#cta" class="btn btn--full margin-right-sm"
               >Fale conosco</a
