update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <li><a class="main-nav-link" href="#meals">Consultoría</a></li>
           <li><a class="main-nav-link" href="#testimonials">Depoimentos</a></li>
           <li><a class="main-nav-link" href="#contato">Contato</a></li>
-          <li><a class="main-nav-link nav-cta" href="#cta">Fale conosco</a></li>
+          <li>
+            <a class="main-nav-link nav-cta " href="#cta">Fale conosco</a>
+          </li>
         </ul>
       </nav>
 
@@ -51,10 +53,13 @@
               AQUI NA S4DS VOCÊ ENCONTRA UM TIME COMPLETO DE MARKETING ATUANDO
               NO CRESCIMENTO DO SEU ESCRITÓRIO!
             </p>
-            <a href="#cta" class="btn btn--full margin-right-sm"
+            <!-- <a href="#cta" class="btn btn--full margin-right-sm"
               >Fale conosco</a
-            >
-            <a href="#how" class="btn btn--outline">Saiba mais &darr;</a>
+            > -->
+
+            <button class="button ">Fale conosco</button>
+            <a href="#how" class="btn btn--outline ">Saiba mais &darr;</a>
+
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img1.png" alt="Foto de cliente" />
