update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
           </div> -->
         </div>
       </section>
+
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="business-insider.png" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
