update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -94,10 +94,37 @@
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
             <img src="business-insider.png" alt="" />
-            <img src="" alt="" />
-            <img src="" alt="" />
-            <img src="" alt="" />
-            <img src="" alt="" />
+            <img src="forbes.png" alt="" />
+            <img src="techcrunch.png" alt="" />
+            <img src="the-new-york-times.png" alt="" />
+            <img src="usa-today.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section id="how" class="section-how">
+        <div class="container">
+          <span class="subheading">How it works</span>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
+
+          <!-- STEP 1 -->
+          <div class="container grid grid--2-cols grid--center-v">
+            <div class="step-text-box">
+              <p class="step-number">1</p>
+              <h3 class="heading-tertiary">tell us what you like blkablabla</h3>
+              <p class="step-description">
+                Never again waste time thinking about what to eat! Omnifood AI
+                will create a 100% personalized weekly meal plan just for you.
+                It makes sure you get all the nutrients and vitamins you need,
+                no matter what diet you follow!
+              </p>
+            </div>
+            <div class="step-img-box">
+              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            </div>
+            <!-- STEP 2 -->
           </div>
         </div>
       </section>
