--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <section id="how" class="section-how">
         <div class="container">
-          <span class="subheading">How it works</span>
+          <span class="subheading">o que oferecemos</span>
           <h2 class="heading-secondary">
             Your daily dose of health in 3 simple steps
           </h2>
@@ -113,7 +113,7 @@
           <div class="container grid grid--2-cols grid--center-v">
             <div class="step-text-box">
               <p class="step-number">1</p>
-              <h3 class="heading-tertiary">tell us what you like blkablabla</h3>
+              <h3 class="heading-tertiary">O que oferecemos</h3>
               <p class="step-description">
                 Never again waste time thinking about what to eat! Omnifood AI
                 will create a 100% personalized weekly meal plan just for you.
@@ -125,6 +125,19 @@
               <img class="step-img" src="app-screen-1.png" alt="tela" />
             </div>
             <!-- STEP 2 -->
+            <div class="step-img-box">
+              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            </div>
+            <div class="step-text-box">
+              <p class="step-number">1</p>
+              <h3 class="heading-tertiary">tell us what you like blkablabla</h3>
+              <p class="step-description">
+                Never again waste time thinking about what to eat! Omnifood AI
+                will create a 100% personalized weekly meal plan just for you.
+                It makes sure you get all the nutrients and vitamins you need,
+                no matter what diet you follow!
+              </p>
+            </div>
           </div>
         </div>
       </section>
