update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -105,37 +105,94 @@
       <section id="how" class="section-how">
         <div class="container">
           <span class="subheading">o que oferecemos</span>
+
           <h2 class="heading-secondary">
-            Your daily dose of health in 3 simple steps
+            Nossa proposta é entregar um marketing 360°, veja como podemos
+            alavancar seu escritório:
           </h2>
 
-          <!-- STEP 1 -->
           <div class="container grid grid--2-cols grid--center-v">
+            <!-- STEP 1 -->
             <div class="step-text-box">
               <p class="step-number">1</p>
-              <h3 class="heading-tertiary">O que oferecemos</h3>
+              <h3 class="heading-tertiary">CRIAÇÃO DE SITES</h3>
               <p class="step-description">
-                Never again waste time thinking about what to eat! Omnifood AI
-                will create a 100% personalized weekly meal plan just for you.
-                It makes sure you get all the nutrients and vitamins you need,
-                no matter what diet you follow!
+                Seu site oferece informações acessíveis 24/7, aumentando a
+                conversão, visibilidade e confiança.
+              </p>
+            </div>
+            <div class="step-img-box1">
+              <img class="step-img1" src="website.gif" alt="tela" />
+            </div>
+            <!-- STEP 2 -->
+            <div class="step-img-box1">
+              <img class="step-img1" src="redes.gif" alt="tela" />
+            </div>
+            <div class="step-text-box">
+              <p class="step-number">2</p>
+              <h3 class="heading-tertiary">GERENCIAMENTO DE REDES SOCIAIS</h3>
+              <p class="step-description">
+                Posicionar-se nas redes sociais é crucial para o relacionamento
+                com clientes e o crescimento do seu negócio.
+              </p>
+            </div>
+            <!-- step 3 -->
+            <div class="step-text-box">
+              <p class="step-number">3</p>
+              <h3 class="heading-tertiary">
+                GESTÃO DE ANÚNCIOS NO GOOGLE E NA META
+              </h3>
+              <p class="step-description">
+                O diferencial competitivo está no tráfego. Que vai ser o
+                responsável por levar todos os seus clientes para a sua landing
+                page ou redes sociais para conversão.
               </p>
             </div>
             <div class="step-img-box">
               <img class="step-img" src="app-screen-1.png" alt="tela" />
             </div>
-            <!-- STEP 2 -->
+            <!-- STEP 4 -->
             <div class="step-img-box">
               <img class="step-img" src="app-screen-1.png" alt="tela" />
             </div>
             <div class="step-text-box">
-              <p class="step-number">1</p>
-              <h3 class="heading-tertiary">tell us what you like blkablabla</h3>
+              <p class="step-number">4</p>
+              <h3 class="heading-tertiary">
+                DESENVOLVIMENTO DE ESTRATÉGIA PERSONALIZADA
+              </h3>
               <p class="step-description">
-                Never again waste time thinking about what to eat! Omnifood AI
-                will create a 100% personalized weekly meal plan just for you.
-                It makes sure you get all the nutrients and vitamins you need,
-                no matter what diet you follow!
+                Oferecemos serviços jurídicos especializados em conformidade com
+                as diretrizes da OAB, adequados à sua tese e área de atuação.
+              </p>
+            </div>
+            <!-- step 5 -->
+            <div class="step-text-box">
+              <p class="step-number">5</p>
+              <h3 class="heading-tertiary">
+                CRIAÇÃO DE LOGOS E IDENTIDADE VISUAL
+              </h3>
+              <p class="step-description">
+                O poder do Branding é indiscutível nos dias de hoje. Por isso
+                criamos sua identidade visual do absoluto zero, que se tornará o
+                maior patrimônio da sua empresa.
+              </p>
+            </div>
+            <div class="step-img-box">
+              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            </div>
+            <!-- STEP 6 -->
+            <div class="step-img-box">
+              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            </div>
+            <div class="step-text-box">
+              <p class="step-number">6</p>
+              <h3 class="heading-tertiary">
+                PRODUÇÃO E EDIÇÃO DE FOTOS E VÍDEOS
+              </h3>
+              <p class="step-description">
+                Oferecemos serviços de roteiro, gravação e edição de vídeos
+                promocionais e institucionais para seu produto jurídico, além de
+                fotografia corporativa para seu site e redes sociais.
               </p>
             </div>
           </div>
