--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <section class="section-featured">
         <div class="container">
-          <h2 class="heading-featured-in">As featured in</h2>
+          <h2 class="heading-featured-in">Aparece em</h2>
           <div class="logos">
             <img src="business-insider.png" alt="" />
             <img src="forbes.png" alt="" />
@@ -148,12 +148,12 @@
                 page ou redes sociais para conversão.
               </p>
             </div>
-            <div class="step-img-box">
-              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            <div class="step-img-box1">
+              <img class="step-img1" src="meta.gif" alt="tela" />
             </div>
             <!-- STEP 4 -->
-            <div class="step-img-box">
-              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            <div class="step-img-box1">
+              <img class="step-img1" src="estrat.gif" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">4</p>
@@ -177,12 +177,12 @@
                 maior patrimônio da sua empresa.
               </p>
             </div>
-            <div class="step-img-box">
-              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            <div class="step-img-box1">
+              <img class="step-img1" src="logo.gif" alt="tela" />
             </div>
             <!-- STEP 6 -->
-            <div class="step-img-box">
-              <img class="step-img" src="app-screen-1.png" alt="tela" />
+            <div class="step-img-box1">
+              <img class="step-img1" src="video.gif" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">6</p>
