update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             > -->
 
             <button class="button ">Fale conosco</button>
-            <a href="#how" class="btn btn--outline ">Saiba mais &darr;</a>
+            <!-- <a href="#how" class="btn btn--outline ">Saiba mais &darr;</a> -->
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
@@ -123,11 +123,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="website.gif" alt="tela" />
+              <img class="step-img1" src="assets/1.gif" alt="tela" />
             </div>
             <!-- STEP 2 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="redes.gif" alt="tela" />
+              <img class="step-img1" src="assets/2.gif" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">2</p>
@@ -150,11 +150,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="meta.gif" alt="tela" />
+              <img class="step-img1" src="assets/3.gif" alt="tela" />
             </div>
             <!-- STEP 4 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="estrat.gif" alt="tela" />
+              <img class="step-img1" src="assets/4.gif" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">4</p>
@@ -179,11 +179,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="logo.gif" alt="tela" />
+              <img class="step-img1" src="assets/5.gif" alt="tela" />
             </div>
             <!-- STEP 6 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="video.gif" alt="tela" />
+              <img class="step-img1" src="assets/6.gif" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">6</p>
