update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script defer src="script.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="queries.css" />
     <title>S4ds</title>
   </head>
-  <body>
+  <body class="">
     <header class="header">
       <a href="#">
         <img class="logo" alt="matheus martins logo" src="logo.png"
@@ -45,6 +55,7 @@
             Desculpe, mas seu navegador não suporta vídeos em HTML5.
           </video>
         </div>
+
         <div class="hero">
           <div class="hero-text-box">
             <h1 class="heading-primary">
