update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -210,6 +210,54 @@
           </div>
         </div>
       </section>
+      <div class="container grid">
+        <aside class="plan-details"></aside>
+      </div>
+      <div class="container grid grid--4-cols">
+        <div class="feature">
+          <ion-icon
+            class="feature-icon md hydrated"
+            name="chatbox-ellipses"
+            role="img"
+          ></ion-icon>
+          <p class="feature-title">
+            Porque quase ninguém entra em contato com você para te contratar!
+          </p>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            suscipit assumenda officiis dolor quidem neque tempore quis.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon
+            class="feature-icon md hydrated"
+            name="ribbon"
+            role="img"
+          ></ion-icon>
+          <p class="feature-title">
+            Porque seu escritório não transmite a autoridade que você sempre
+            sonhou!
+          </p>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            suscipit assumenda officiis dolor quidem neque tempore quis.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon
+            class="feature-icon md hydrated"
+            name="desktop"
+            role="img"
+          ></ion-icon>
+          <p class="feature-title">
+            Porque você está insatisfeito com seu posicionamento digital!
+          </p>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            suscipit assumenda officiis dolor quidem neque tempore quis.
+          </p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
