--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
           </div>
         </div>
       </section>
-      <div class="container grid">
+      <div class="container ">
         <aside class="plan-details"></aside>
+        <h2 class="heading-secondary">POR QUE CONTRATAR A S4DS</h2>
       </div>
       <div class="container grid grid--4-cols">
         <div class="feature">
