update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="queries.css" />
     <title>S4ds</title>
   </head>
-  <body class="">
+  <body>
     <header class="header">
       <a href="#">
         <img class="logo" alt="matheus martins logo" src="logo.png"
@@ -259,6 +259,34 @@
           </p>
         </div>
       </div>
+      <section class="section-cta" id="cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Comece a alavancar o seu negócio!</h2>
+              <p class="cta-text">
+                Você pode encontrar Gestor de Tráfego, designers gráficos, editores de vídeo nesse mercado!
+                Mas não encontrará essa equipe junta liderada por outro advogado que validou toda sua estratégia em seu próprio escritório! 
+
+
+              </p>
+
+              <a class="btn btn--form" href="https://api.whatsapp.com/send?phone=5561982836983">
+                <ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp
+              </a>
+              
+              <!-- <button class="btn btn--form"><ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp</button> -->
+            </div>
+          </form>
+          
+            <div
+              class="cta-img-box"
+              role="img"
+              aria-label="mulher sorrindo na praia"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
