update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#how">O que oferecemos</a></li>
-          <li><a class="main-nav-link" href="#meals">Consultoría</a></li>
-          <li><a class="main-nav-link" href="#testimonials">Depoimentos</a></li>
+         
+          <li><a class="main-nav-link" href="#why">Porque a S4DS</a></li>
           <li><a class="main-nav-link" href="#contato">Contato</a></li>
           <li>
             <a class="main-nav-link nav-cta " href="#cta">Fale conosco</a>
@@ -211,7 +211,7 @@
         </div>
       </section>
       <div class="container ">
-        <aside class="plan-details"></aside>
+        <aside id="why" class="plan-details"></aside>
         <h2 class="heading-secondary">POR QUE CONTRATAR A S4DS</h2>
       </div>
       <div class="container grid grid--4-cols">
@@ -271,7 +271,7 @@
 
               </p>
 
-              <a class="btn btn--form" href="https://api.whatsapp.com/send?phone=5561982836983">
+              <a class="btn btn--form" href="https://api.whatsapp.com/send?phone=">
                 <ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp
               </a>
               
