update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
             suscipit assumenda officiis dolor quidem neque tempore quis.
           </p>
         </div>
-      </div>
+       
+      </div> <p class="heading container2">
+          Além disso, só atuamos com escritórios de advocacia justamente por entender sobre o mercado e por toda nossa especialização. </p>
       <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
