update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -278,10 +278,11 @@
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
-              <h2 class="heading-secondary">Comece a alavancar o seu negócio!</h2>
+              <h2 class="heading-secondary">Conquiste agora novos clientes!</h2>
               <p class="cta-text">
-                Você pode encontrar Gestor de Tráfego, designers gráficos, editores de vídeo nesse mercado!
-                Mas não encontrará essa equipe junta liderada por outro advogado que validou toda sua estratégia em seu próprio escritório! 
+                Aqui você terá uma equipe completa com os melhores profissionais da área de gestão de tráfego, designer gráfico, edição de vídeos, e muito mais!
+
+                Conquiste novos clientes e feche novos contratos com estratégias validadas no digital!
 
 
               </p>
