update index.html, queries.css and style.css

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </div>
         </div>
       </section>
-      <button class="btn2 centro"> Quero atrair mais clientes
+      <button class="btn2 centro"> Quero atrair mais clientes!
       </button>
       <div class="container ">
         <aside id="why" class="plan-details"></aside>
@@ -288,7 +288,7 @@
               </p>
 
               <a class="btn btn--form" href="https://api.whatsapp.com/send?phone=">
-                <ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp
+                <ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp!
               </a>
               
               <!-- <button class="btn btn--form"><ion-icon name="logo-whatsapp"></ion-icon> Converse comigo agora mesmo pelo WhatsApp</button> -->
