--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       </button>
       <div class="container ">
         <aside id="why" class="plan-details"></aside>
-        <h2 class="heading-secondary">POR QUE CONTRATAR A S4DS</h2>
+        <h2 class="heading-secondary hd">POR QUE CONTRATAR A S4DS?</h2>
       </div>
       <div class="container grid grid--4-cols">
         <div class="feature">
