--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/1.gif" alt="tela" />
+              <img class="step-img1" src="assets/1.png" alt="tela" />
             </div>
             <!-- STEP 2 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/2.gif" alt="tela" />
+              <img class="step-img1" src="assets/2.png" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">2</p>
@@ -223,11 +223,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/3.gif" alt="tela" />
+              <img class="step-img1" src="assets/3.png" alt="tela" />
             </div>
             <!-- STEP 4 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/4.gif" alt="tela" />
+              <img class="step-img1" src="assets/4.png" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">4</p>
@@ -252,11 +252,11 @@
               </p>
             </div>
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/5.gif" alt="tela" />
+              <img class="step-img1" src="assets/5.png" alt="tela" />
             </div>
             <!-- STEP 6 -->
             <div class="step-img-box1">
-              <img class="step-img1" src="assets/6.gif" alt="tela" />
+              <img class="step-img1" src="assets/6.png" alt="tela" />
             </div>
             <div class="step-text-box">
               <p class="step-number">6</p>
